cfn/AWSTemplateSg.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create SG

# ------------------------------------------------------------#
#   Parameters
# ------------------------------------------------------------#
Parameters:
  ServicePrefix:
    Type: String
    Default: "example"
  EnvPrefix:
    Type: String
    Default: "dev"
    AllowedValues:
      - "dev"
      - "stg"
      - "prd"

# ------------------------------------------------------------#
#   Resources
# ------------------------------------------------------------#
Resources:
  SecurityGroupFront:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "SG for ${ServicePrefix}-${EnvPrefix}-front"
      GroupName: !Sub "${ServicePrefix}-${EnvPrefix}-front-sg"
      VpcId: !ImportValue "${ServicePrefix}-${EnvPrefix}-vpc"
      Tags:
        - Key: Name
          Value: "${ServicePrefix}-${EnvPrefix}-front-sg"

  SecurityGroupApp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "SG for ${ServicePrefix}-${EnvPrefix}-app"
      GroupName: !Sub "${ServicePrefix}-${EnvPrefix}-app-sg"
      VpcId: !ImportValue "${ServicePrefix}-${EnvPrefix}-vpc"
      Tags:
        - Key: Name
          Value: "${ServicePrefix}-${EnvPrefix}-app-sg"

  SecurityGroupData:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "SG for ${ServicePrefix}-${EnvPrefix}-data"
      GroupName: !Sub "${ServicePrefix}-${EnvPrefix}-data-sg"
      VpcId: !ImportValue "${ServicePrefix}-${EnvPrefix}-vpc"
      Tags:
        - Key: Name
          Value: "${ServicePrefix}-${EnvPrefix}-data-sg"

  FrontToFrontIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupFront.GroupId
      GroupId: !GetAtt SecurityGroupFront.GroupId

  AppToFrontIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupApp.GroupId
      GroupId: !GetAtt SecurityGroupFront.GroupId

  HttpToFrontIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
      GroupId: !GetAtt SecurityGroupFront.GroupId

  HttpsToFrontIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0
      GroupId: !GetAtt SecurityGroupFront.GroupId

  IcmpToFrontIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      CidrIp: 0.0.0.0/0
      GroupId: !GetAtt SecurityGroupFront.GroupId

  AppToAppIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupApp.GroupId
      GroupId: !GetAtt SecurityGroupApp.GroupId

  FrontToAppIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupFront.GroupId
      GroupId: !GetAtt SecurityGroupApp.GroupId

  FrontToDataIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupFront.GroupId
      GroupId: !GetAtt SecurityGroupData.GroupId

  AppToDataIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupApp.GroupId
      GroupId: SecurityGroupData.GroupId

  DataToDataIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SecurityGroupData.GroupId
      GroupId: SecurityGroupData.GroupId

# ------------------------------------------------------------#
#   Outputs
# ------------------------------------------------------------#
Outputs:
  SecurityGroupFront:
    Value: !Ref SecurityGroupFront
    Export:
      Name: !Sub "${ServicePrefix}-${EnvPrefix}-front-sg"
  SecurityGroupApp:
    Value: !Ref SecurityGroupApp
    Export:
      Name: !Sub "${ServicePrefix}-${EnvPrefix}-app-sg"
  SecurityGroupData:
    Value: !Ref SecurityGroupData
    Export:
      Name: !Sub "${ServicePrefix}-${EnvPrefix}-data-sg"
